--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -21,7 +21,7 @@ jobs:
             "browsertrix",
             "chatbot",
             "dropbox",
-            "proofmode",
+            "proofmode-signal",
             "starling-capture",
           ]
     runs-on: ubuntu-latest
